--- a/index.html
+++ b/index.html
@@ -886,6 +886,7 @@
       <li><code>docs/プロジェクト仕様書.md</code>にプロジェクトの詳細を記載</li>
       <li>何を作るか、どう動くか、どんなデータベースを使うかを明確にする</li>
       <li>2〜3 人でレビューして内容を確定</li>
+      <li>プロジェクト仕様書のチェックは5人からリアクションをもらうかVCで会議をして承認がでたら次に進んでOK</li>
       <li>完成したら Discord のフォーラム「pj管理」に新しく投稿を作成し、タグとタイトルを適切に設定して仕様書を貼る</li>
     </ul>
     <h3 id="3-develop-ブランチを作成">3. develop ブランチを作成 </h3>
